<resources>
    <string name="app_name">Animals</string>
    <string name="add_new_animal">Add new animal</string>
    <string name="set_filter_to_animals_list">Set filter to animals list</string>
    <string name="name">Name<font color='#FF0000'>*</font></string>
    <string name="age">Age<font color='#FF0000'>*</font></string>
    <string name="breed">Breed</string>
    <!-- Preference Titles -->
    <string name="settings_title">Settings</string>
    <string name="order_title">Order by</string>
    <string name="provider_title">Provider</string>
    <string name="use_cursor_summary">By default, room is used as the provider, but you can use cursors.</string>
    <string name="add_animal_title">Add New Animal</string>
    <string name="add_animal_button_caption">ADD</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!--Strings used for modify animal fragment-->
    <string name="edit_animal">Edit Animal</string>
    <string name="confirm">Confirm</string>
    <!--Strings used for animals list fragment-->
    <string name="delete_animal">Delete animal %s</string>
    <string name="name_animal">Name: %s</string>
    <string name="age_animal">Age: %s</string>
    <string name="breed_animal">Breed: %s</string>
    <string name="KEY_PREF_ORDER">order</string>
    <string name="KEY_PREF_PROVIDER">provider</string>
    <string name="KEY_PREF_LAST_UPDATE">lastUpdate</string>
    <string name="empty_error_text">Should not be empty</string>
</resources>